--- a/index.html
+++ b/index.html
@@ -1,15 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Portfolio</title>
+  <meta name="description" content="This is the Portfolio's project of Udacity Front-end Nanodegree course." />
+  <link rel="stylesheet" href="css/style.css"> </head>
+
+<body>
+  <div class="wrapper">
+    <header>
+      <div class="logo"><img src="images/SVG/logo.svg" alt="Claudio Gavioli logo"></div>
+      <div class="heading">
+        <h1>Claudio Gavioli</h1> <span>Front-End Web Developer</span> </div>
+    </header>
+    <main>
+      <section class="hero__img">
+        <figure>
+          <picture>
+            <source media="(min-width: 750px)" srcset="images/hero/computer_750.jpg 1x" />
+            <source media="(min-width: 750px)" srcset="images/hero/computer_1500.jpg 2x" />
+            <source media="(min-width: 1100px)" srcset="images/hero/computer_1100.jpg 1x" />
+            <source media="(min-width: 1100px)" srcset="images/hero/computer_2200.jpg 2x" />
+            <source media="(min-width: 1920px)" srcset="images/hero/computer_1920.jpg" /> <img src="images/hero/computer_1920.jpg" alt="a beautiful cat roar"> </picture>
+        </figure>
+      </section>
+      <h2>Featured Work</h2>
+      <section class="item__container">
+        <article class="item">
+          <figure>
+            <picture>
+              <source media="(min-width: 750px)" srcset="images/cat-yawn/cat-yawn_600.jpg 2x" /> <img src="images/cat-yawn/cat-yawn_300.jpg" alt="a beautiful cat roar"> </picture>
+            <div class="item__text">
+              <h3>Work 1</h3>
+              <p>Go to site: <a href="">path site</a></p>
+            </div>
+          </figure>
+        </article>
+        <article class="item">
+          <figure>
+            <picture>
+              <source media="(min-width: 750px)" srcset="images/cat-yawn/cat-yawn_600.jpg 2x" /> <img src="images/cat-yawn/cat-yawn_300.jpg" alt="a beautiful cat roar"> </picture>
+            <div class="item__text">
+              <h3>Work 2</h3>
+              <p>Go to site: <a href="">path site</a></p>
+            </div>
+          </figure>
+        </article>
+        <article class="item">
+          <figure>
+            <picture>
+              <source media="(min-width: 750px)" srcset="images/cat-yawn/cat-yawn_600.jpg 2x" />
+              <source media="(min-width: 1000px)" srcset="images/cat-yawn/cat-yawn_1200.jpg 2x" /> <img src="images/cat-yawn/cat-yawn_300.jpg" alt="a beautiful cat roar"> </picture>
+            <div class="item__text">
+              <h3>Work 3</h3>
+              <p>Go to site: <a href="">path site</a></p>
+            </div>
+          </figure>
+        </article>
+      </section>
+    </main>
+    <footer> </footer>
+  </div>
+</body>
+
 </html>
