--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <source media="(min-width: 750px)" srcset="images/hero/computer_1500.jpg 2x" />
             <source media="(min-width: 1100px)" srcset="images/hero/computer_1100.jpg 1x" />
             <source media="(min-width: 1100px)" srcset="images/hero/computer_2200.jpg 2x" />
-            <source media="(min-width: 1920px)" srcset="images/hero/computer_1920.jpg" /> <img src="images/hero/computer_1920.jpg" alt="a beautiful cat roar"> </picture>
+            <source media="(min-width: 1920px)" srcset="images/hero/computer_1920.jpg" /> <img src="images/hero/computer_750.jpg" alt="a beautiful cat roar"> </picture>
         </figure>
       </section>
       <h2>Featured Work</h2>
@@ -62,7 +62,15 @@
         </article>
       </section>
     </main>
-    <footer> </footer>
+    <footer>
+      <div class="social"> <a class="social__item" href="mailto:claudio.gavi@gmail.com?subject=I-have-an-idea!"><img src="images/SVG/mail.svg" alt="write email"></a> <a class="social__item" href=""><img src="images/SVG/github.svg" alt="Github logo"></a> <a class="social__item"
+          href=""><img src="images/SVG/linkedin.svg" alt="Linkedin logo"></a> </div>
+      <div class="copyright">
+        <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect" target="_blank">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
+            title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        <div>Image made by <a href="https://pixabay.com/it/service/terms/#usage" title="Pixabay" target="_blank">Pixabay</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+      </div>
+    </footer>
   </div>
 </body>
 
