update image and link of work

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>Featured Work</h2>
       <section class="item__container">
         <article class="item">
-          <figure> <img id="cat" src="images/SVG/sitting-cat.svg" alt="a sitting cat waiting for his destiny">
+          <figure> <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank"><img id="cat" src="images/SVG/sitting-cat.svg" alt="a sitting cat waiting for his destiny"></a>
             <div class="item__text">
               <h3>Animal Trading Card</h3>
               <p>See the project on <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank">Github.com</a></p>
@@ -38,7 +38,7 @@
           </figure>
         </article>
         <article class="item">
-          <figure> <img id="city" src="images/site-ref/The-Brighton-Time/city.png" alt="a colorful city landscape icon">
+          <figure> <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank"><img id="city" src="images/site-ref/The-Brighton-Time/city.png" alt="a colorful city landscape icon"></a>
             <div class="item__text">
               <h3>The Brighton Times</h3>
               <p>See the project on <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank">Github.com</a></p>
@@ -46,13 +46,10 @@
           </figure>
         </article>
         <article class="item">
-          <figure>
-            <picture>
-              <source media="(min-width: 750px)" srcset="images/site-ref/cat-yawn/cat-yawn_600.jpg 2x" />
-              <source media="(min-width: 1000px)" srcset="images/site-ref/cat-yawn/cat-yawn_1200.jpg 2x" /> <img src="images/site-ref/cat-yawn/cat-yawn_300.jpg" alt="a beautiful cat roar"> </picture>
+          <figure> <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank"><img src="images/site-ref/cat-yawn/cat-yawn_300.jpg" alt="a beautiful cat roar"> </a>
             <div class="item__text">
               <h3>Work 3</h3>
-              <p>Go to site: <a href="">path site</a></p>
+              <p>See the project on <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank">Github.com</a></p>
             </div>
           </figure>
         </article>
