add pixel art maker ref

--- a/index.html
+++ b/index.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Portfolio</title>
-  <meta name="description" content="This is the Portfolio's project of Udacity Front-end Nanodegree course." />
-  <link rel="stylesheet" href="css/style.css"> </head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Portfolio</title>
+    <meta name="description" content="This is the Portfolio's project of Udacity Front-end Nanodegree course." />
+    <link rel="stylesheet" href="css/style.css"> </head>
 
-<body>
-  <div class="wrapper">
-    <header>
-      <div class="logo"><img src="images/SVG/logo.svg" alt="Claudio Gavioli logo"></div>
-      <div class="heading">
-        <h1>Claudio Gavioli</h1> <span>Front-End Web Developer</span> </div>
-    </header>
-    <main>
-      <section class="hero__img">
-        <figure>
-          <picture>
-            <source media="(min-width: 750px)" srcset="images/hero/computer_750.jpg 1x" />
-            <source media="(min-width: 750px)" srcset="images/hero/computer_1500.jpg 2x" />
-            <source media="(min-width: 1100px)" srcset="images/hero/computer_1100.jpg 1x" />
-            <source media="(min-width: 1100px)" srcset="images/hero/computer_2200.jpg 2x" />
-            <source media="(min-width: 1920px)" srcset="images/hero/computer_1920.jpg" /> <img src="images/hero/computer_750.jpg" alt="a beautiful cat roar"> </picture>
-        </figure>
-      </section>
-      <h2>Featured Work</h2>
-      <section class="item__container">
-        <article class="item">
-          <figure> <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank"><img id="cat" src="images/SVG/sitting-cat.svg" alt="a sitting cat waiting for his destiny"></a>
-            <div class="item__text">
-              <h3>Animal Trading Card</h3>
-              <p>See the project on <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank">Github.com</a></p>
-            </div>
+  <body>
+    <div class="wrapper">
+      <header>
+        <div class="logo"><img src="images/SVG/logo.svg" alt="Claudio Gavioli logo"></div>
+        <div class="heading">
+          <h1>Claudio Gavioli</h1> <span>Front-End Web Developer</span> </div>
+      </header>
+      <main>
+        <section class="hero__img">
+          <figure>
+            <picture>
+              <source media="(min-width: 750px)" srcset="images/hero/computer_750.jpg 1x" />
+              <source media="(min-width: 750px)" srcset="images/hero/computer_1500.jpg 2x" />
+              <source media="(min-width: 1100px)" srcset="images/hero/computer_1100.jpg 1x" />
+              <source media="(min-width: 1100px)" srcset="images/hero/computer_2200.jpg 2x" />
+              <source media="(min-width: 1920px)" srcset="images/hero/computer_1920.jpg" /> <img src="images/hero/computer_750.jpg" alt="a beautiful cat roar"> </picture>
           </figure>
-        </article>
-        <article class="item">
-          <figure> <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank"><img id="city" src="images/site-ref/The-Brighton-Time/city.png" alt="a colorful city landscape icon"></a>
-            <div class="item__text">
-              <h3>The Brighton Times</h3>
-              <p>See the project on <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank">Github.com</a></p>
-            </div>
-          </figure>
-        </article>
-        <article class="item">
-          <figure> <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank"><img src="images/site-ref/cat-yawn/cat-yawn_300.jpg" alt="a beautiful cat roar"> </a>
-            <div class="item__text">
-              <h3>Work 3</h3>
-              <p>See the project on <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank">Github.com</a></p>
-            </div>
-          </figure>
-        </article>
-      </section>
-    </main>
-    <footer>
-      <div class="social"> <a class="social__item" href="mailto:claudio.gavi@gmail.com?subject=I-have-an-idea!"><img src="images/SVG/mail.svg" alt="write email"></a> <a class="social__item" href=""><img src="images/SVG/github.svg" alt="Github logo"></a> <a class="social__item"
-          href=""><img src="images/SVG/linkedin.svg" alt="Linkedin logo"></a> </div>
-      <div class="copyright">
-        <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect" target="_blank">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
-            title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-        <div>Image made by <a href="https://pixabay.com/it/service/terms/#usage" title="Pixabay" target="_blank">Pixabay</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-      </div>
-    </footer>
-  </div>
-</body>
+        </section>
+        <h2>Featured Work</h2>
+        <section class="item__container">
+          <article class="item">
+            <figure> <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank"><img id="cat" src="images/SVG/cat.svg" alt="a sitting cat waiting for his destiny"></a>
+              <div class="item__text">
+                <h3>Animal Trading Card</h3>
+                <p>See the project on <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank">Github.com</a></p>
+              </div>
+            </figure>
+          </article>
+          <article class="item">
+            <figure> <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank"><img id="city" src="images/site-ref/The-Brighton-Time/city.png" alt="a colorful city landscape icon"></a>
+              <div class="item__text">
+                <h3>The Brighton Times</h3>
+                <p>See the project on <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank">Github.com</a></p>
+              </div>
+            </figure>
+          </article>
+          <article class="item">
+            <figure> <a href="https://github.com/IoClaud/pixel-art-maker" title="https://github.com/IoClaud/pixel-art-maker" target="_blank"><img id="paint" src="images/SVG/paint-palette.svg" alt="a painter's palette"> </a>
+              <div class="item__text">
+                <h3>Pixel Art Maker</h3>
+                <p>See the project on <a href="https://github.com/IoClaud/pixel-art-maker" title="https://github.com/IoClaud/pixel-art-maker" target="_blank">Github.com</a></p>
+              </div>
+            </figure>
+          </article>
+        </section>
+      </main>
+      <footer>
+        <div class="social"> <a class="social__item" href="mailto:claudio.gavi@gmail.com?subject=I-have-an-idea!"><img src="images/SVG/mail.svg" alt="write email"></a> <a class="social__item" href=""><img src="images/SVG/github.svg" alt="Github logo"></a> <a class="social__item"
+            href=""><img src="images/SVG/linkedin.svg" alt="Linkedin logo"></a> </div>
+        <div class="copyright">
+          <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect" target="_blank">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
+              title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+          <div>Image made by <a href="https://pixabay.com/it/service/terms/#usage" title="Pixabay" target="_blank">Pixabay</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        </div>
+      </footer>
+    </div>
+  </body>
 
 </html>
