fixed social link

--- a/index.html
+++ b/index.html
@@ -56,8 +56,17 @@
         </section>
       </main>
       <footer>
-        <div class="social"> <a class="social__item" href="mailto:claudio.gavi@gmail.com?subject=I-have-an-idea!"><img src="images/SVG/mail.svg" alt="write email"></a> <a class="social__item" href=""><img src="images/SVG/github.svg" alt="Github logo"></a> <a class="social__item"
-            href=""><img src="images/SVG/linkedin.svg" alt="Linkedin logo"></a> </div>
+        <div class="social">
+          <a class="social__item" href="mailto:claudio.gavi@gmail.com?subject=I-have-an-idea!">
+            <img src="images/SVG/mail.svg" alt="write email">
+          </a>
+          <a class="social__item" href="https://github.com/IoClaud" title="github.com" target="_blank">
+            <img src="images/SVG/github.svg" alt="Github logo" >
+          </a>
+          <a class="social__item" href="https://www.linkedin.com/in/claudio-gavioli/" title="linkedin.com" target="_blank">
+            <img src="images/SVG/linkedin.svg" alt="Linkedin logo">
+          </a>
+        </div>
         <div class="copyright">
           <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect" target="_blank">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
               title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
