--- a/index.html
+++ b/index.html
@@ -12,51 +12,69 @@
 
       <body>
             <div class="wrapper">
-
                   <header>
-                        <div class="logo"><img src="images/SVG/logo.svg" alt="Claudio Gavioli logo"></div>
+                        <div class="logo">
+                              <img src="images/SVG/logo.svg" alt="Claudio Gavioli logo">
+                        </div>
                         <div class="heading">
-                              <h1>Claudio Gavioli</h1> <span>Front-End Web Developer</span> </div>
+                              <h1 class="primary-title">Claudio Gavioli</h1>
+                              <span>Front-End Web Developer</span>
+                        </div>
                   </header>
 
                   <div class="content">
-
                         <section class="hero-img">
                               <figure>
-                                    <img srcset="images/hero/computer_750.jpg 320w,
-                                                                               images/hero/computer_1100.jpg 750w,
-                                                                               images/hero/computer_1920.jpg 1100w" src="images/hero/computer_1920.jpg" alt="hands working on the code">
+                                    <img srcset="images/hero/computer_1920.jpg 1500w,
+                                                            images/hero/computer_1100.jpg 1100w,
+                                                            images/hero/computer_750.jpg 750w" sizes="(min-width: 750px) 750px, 100vw" src="images/hero/computer_1920.jpg" alt="hands working on the code">
                               </figure>
                         </section>
 
-                        <h2>Featured Work</h2>
-
                         <main>
-
+                              <h2 class="section-title">Featured Work</h2>
                               <section class="item-container">
                                     <article class="item">
-                                          <figure> <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank"><img id="cat" src="images/SVG/cat.svg" alt="a sitting cat waiting for his destiny"></a>
+                                          <figure>
+                                                <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank">
+                                                    <img id="cat" class="icon-item" src="images/SVG/cat.svg" alt="a sitting cat waiting for his destiny">
+                                                </a>
+
                                                 <div class="item-text">
-                                                      <h3>Animal Trading Card</h3>
-                                                      <p>See the project on <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank">Github.com</a></p>
+                                                      <h3 class="item-title">Animal Trading Card</h3>
+                                                      <p>See the project on
+                                                            <a href="https://github.com/IoClaud/Animal-Card" title="https://github.com/IoClaud/Animal-Card" target="_blank">Github.com</a>
+                                                      </p>
                                                 </div>
                                           </figure>
                                     </article>
 
                                     <article class="item">
-                                          <figure> <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank"><img id="city" src="images/site-ref/The-Brighton-Time/city.png" alt="a colorful city landscape icon"></a>
+                                          <figure>
+                                                <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank">
+                                            <img id="city" class="icon-item" src="images/site-ref/The-Brighton-Time/city.png" alt="a colorful city landscape icon">
+                                        </a>
+
                                                 <div class="item-text">
-                                                      <h3>The Brighton Times</h3>
-                                                      <p>See the project on <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank">Github.com</a></p>
+                                                      <h3 class="item-title">The Brighton Times</h3>
+                                                      <p>See the project on
+                                                            <a href="https://github.com/IoClaud/Brighton-Times" title="https://github.com/IoClaud/Brighton-Times" target="_blank">Github.com</a>
+                                                      </p>
                                                 </div>
                                           </figure>
                                     </article>
 
                                     <article class="item">
-                                          <figure> <a href="https://github.com/IoClaud/pixel-art-maker" title="https://github.com/IoClaud/pixel-art-maker" target="_blank"><img id="paint" src="images/SVG/paint-palette.svg" alt="a painter's palette"> </a>
+                                          <figure>
+                                                <a href="https://github.com/IoClaud/pixel-art-maker" title="https://github.com/IoClaud/pixel-art-maker" target="_blank">
+                                            <img id="paint" class="icon-item" src="images/SVG/paint-palette.svg" alt="a painter's palette">
+                                        </a>
+
                                                 <div class="item-text">
-                                                      <h3>Pixel Art Maker</h3>
-                                                      <p>See the project on <a href="https://github.com/IoClaud/pixel-art-maker" title="https://github.com/IoClaud/pixel-art-maker" target="_blank">Github.com</a></p>
+                                                      <h3 class="item-title">Pixel Art Maker</h3>
+                                                      <p>See the project on
+                                                            <a href="https://github.com/IoClaud/pixel-art-maker" title="https://github.com/IoClaud/pixel-art-maker" target="_blank">Github.com</a>
+                                                      </p>
                                                 </div>
                                           </figure>
                                     </article>
@@ -68,19 +86,20 @@
                   <footer>
                         <div class="social">
                               <a class="social-item" href="mailto:claudio.gavi@gmail.com?subject=I-have-an-idea!">
-                                    <img src="images/SVG/mail.svg" alt="write email">
-                              </a>
+                                <img src="images/SVG/mail.svg" alt="write email">
+                            </a>
                               <a class="social-item" href="https://github.com/IoClaud" title="github.com" target="_blank">
-                                    <img src="images/SVG/github.svg" alt="Github logo" >
-                              </a>
+                                <img src="images/SVG/github.svg" alt="Github logo" >
+                            </a>
                               <a class="social-item" href="https://www.linkedin.com/in/claudio-gavioli/" title="linkedin.com" target="_blank">
-                                    <img src="images/SVG/linkedin.svg" alt="Linkedin logo">
-                              </a>
+                                <img src="images/SVG/linkedin.svg" alt="Linkedin logo">
+                            </a>
                         </div>
-                        <div class="copyright">
+                        <div class="copyright-container">
                               <div class="copyright">Icons made by
                                     <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect" target="_blank">Pixel perfect</a> from
-                                    <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+                                    <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a> is licensed by
+                                    <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
                               </div>
                               <div class="copyright">Image made by
                                     <a href="https://pixabay.com/it/service/terms/#usage" title="Pixabay" target="_blank"> Pixabay</a> is licensed by
